--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,22 @@ img {
     flex-direction: row;
     justify-content: space-around;
 }
+
+.fightArea {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.winArea {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
 .header {
     display: flex;
     text-align: center;
